Fixed bug #43318 The "const" statement is still allowed outside of namespaces but arrays are disabled.